# semantic-plagiarism-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/sample_corpus/: doc_03.txt  sample_pairs.csv
docs/: project_report.md  project_spec.md  project_spec.tex
notebooks/: exploration.ipynb
outputs/: candidates.csv  metrics.csv  pair_predictions.csv  two_file_compare.json
scripts/: build_report_pdf.py  run_demo.sh
src/plagiarism_engine/: bonus.py  cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py
tests/: test_bonus.py  test_cli.py  test_dataset.py  test_evaluation.py  test_lsh.py  test_minhash.py  test_preprocessing.py  test_simhash.py
